--- a/.gitignore
+++ b/.gitignore
@@ -2,50 +2,23 @@
 .gradle/
 build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
 
 ### IntelliJ IDEA ###
 .idea/
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
 *.iml
-*.ipr
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+### Logs ###
+*.log
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+### Environment files ###
+.env
+.env.*
+!.env.example
 
-### VS Code ###
-.vscode/
-
-### Mac OS ###
+### macOS ###
 .DS_Store
 
-### Environment files and configuration ###
-.env
-
-### OS ###
+### Windows ###
 Thumbs.db
 desktop.ini
