--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,21 @@ repositories {
 }
 
 dependencies {
+    // Web and REST API
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Persistence and JPA support
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // Groovy language support
     implementation 'org.apache.groovy:groovy:4.0.14'
+
+    // Unit testing with JUnit and Spock
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 springBoot {
