--- a/build.gradle
+++ b/build.gradle
@@ -21,13 +21,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.mysql:mysql-connector-j'
 
+    // Data validation
+    implementation("org.springframework.boot:spring-boot-starter-validation")
+
     // Groovy language support
     implementation 'org.apache.groovy:groovy:4.0.14'
 
-    // Unit testing with JUnit and Spock
+    // Unit testing with Core Spring Boot and Spock Framework
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
     testImplementation("org.spockframework:spock-core:2.4-M6-groovy-4.0")
 }
